--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -95,7 +95,7 @@
       <div class="card estilo-c">
         <a href="/products/Card">
           <div class="img-container">
-            <img src="/imagenes/JabonLuffa-09.jpg" alt="producto">
+            <img src="/images/JabonLuffa-09.jpg" alt="producto">
             <span class="promo">15% off</span>
           </div>
           <div class="info-container">
@@ -120,7 +120,7 @@
       <div class="card estilo-c">
         <a href="/products/Card">
           <div class="img-container">
-            <img src="/imagenes/JabonLuffa-09.jpg" alt="producto">
+            <img src="/images/JabonLuffa-09.jpg" alt="producto">
             <span class="promo">15% off</span>
           </div>
           <div class="info-container">
@@ -145,7 +145,7 @@
       <div class="card estilo-c">
         <a href="/products/Card">
           <div class="img-container">
-            <img src="/imagenes/JabonLuffa-09.jpg" alt="producto">
+            <img src="/images/JabonLuffa-09.jpg" alt="producto">
             <span class="promo">15% off</span>
           </div>
           <div class="info-container">
@@ -170,7 +170,7 @@
       <div class="card estilo-c">
         <a href="/products/Card">
           <div class="img-container">
-            <img src="/imagenes/JabonLuffa-09.jpg" alt="producto">
+            <img src="/images/JabonLuffa-09.jpg" alt="producto">
             <span class="promo">15% off</span>
           </div>
           <div class="info-container">
