--- a/site_ViveBio/views/productCart.html
+++ b/site_ViveBio/views/productCart.html
@@ -28,13 +28,17 @@
                 <div class="carrito-images">
                     <img src="images/jabon con petalos.jpg" alt="">
                 </div>
-
+            <div class="carrito-texto-productos">
                 <div class="carrito-titulo">
                     <h3>Jabón con Pétalos</h3>
+                </div>
+
+                <div>
                     <h4>Este contiene aceites naturales que devuelven
                         la humedad e hidratación a tu piel.
                     </h4>
                 </div>
+            </div>
             </article>
 
             <!-- BOTONES -->
@@ -152,6 +156,8 @@
             </div>
 
         </section>
+        
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
     </main>
 
