--- a/site_ViveBio/public/css/carrito.css
+++ b/site_ViveBio/public/css/carrito.css
@@ -153,10 +153,6 @@
 }
 
 
-            
-
-
-
 
             /* 460 */
 
@@ -224,8 +220,21 @@ text-align: center;
 
 
            /* 768 */
+    @media (min-width: 768px){
+        .carrito-contenedor {
+            width: 60%;
+            display: flex;
+            flex-wrap: wrap;
+        }}
 
- @media (min-width: 768px){
+    @media (min-width: 768px){
+            .carrito-box {
+                width: 60%;
+                display: flex;
+                flex-wrap: wrap;
+        }}
+
+    @media (min-width: 768px){
     carrito-box {
     width: 100%;
     height: 50%;
@@ -234,7 +243,7 @@ text-align: center;
     display: flex;
     justify-content: center;
     border-radius: 20px;
-}
+    }
 }
 
 @media (min-width: 768px){
