--- a/site_ViveBio/src/views/products/addProducts.ejs
+++ b/site_ViveBio/src/views/products/addProducts.ejs
@@ -12,11 +12,11 @@
                             <div class="sub_container">
                                 <div class="add_form-box">
                                     <label for="name"><strong>Nombre</strong></label>
-                                    <input class="" type="text" id="name" name="name" style="padding:5px;">
+                                    <input class="add_input" type="text" id="name" name="name" style="padding:5px;">
                                 </div>
                                 <div class="add_form-box">
                                     <label for="image"><strong>Imagen</strong></label>
-                                    <input type="file" id="image" name="image" multiple>
+                                    <input class="add_input" type="file" id="image" name="image" multiple>
                                 </div>
                                 <div class="add_form-box">
                                     <label for="category"><strong>Categoría</strong></label>
@@ -26,13 +26,13 @@
                                 </div>
                                 <div class="add_form-box">
                                     <label for="price"><strong>Precio</strong></label>
-                                    <input class="" type="number" id="price" name="price" style="padding:5px;">
+                                    <input class="add_input" type="number" id="price" name="price" style="padding:5px;">
                                 </div>
                             </div>
                             <div>
                                 <div class="add_form-box-description">
                                     <label for="desciption"><strong>Descripción</strong></label>
-                                    <textarea type="text" id="desciption" name="desciption" rows="3" cols="35"
+                                    <textarea class="add_input" type="text" id="desciption" name="desciption" rows="3" cols="35"
                                         style="resize: none; padding:5px;"></textarea>
                                 </div>
                             </div>
