--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -31,9 +31,9 @@
             <br> SUMATE AL CAMBIO💚
           </p>
           <div class="producto__cart">
-            <button><i class="fa-solid fa-star"></i></button>
+            <a href="#"><i class="fa-solid fa-star"></i></a> 
             <a href="/productCarrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <button><i class="fa-solid fa-share-nodes"></i></button>
+            <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
             <a href="/products/Edit"><i class="fa-solid fa-file-pen"></i></a>
           </div>
         </div>
