--- a/site_ViveBio/public/css/productCard.css
+++ b/site_ViveBio/public/css/productCard.css
@@ -416,6 +416,7 @@
             align-items: flex-end;
             justify-content: flex-end;
             margin-top: -60px;
+            gap: 10px;
         }
 
         .productCard .producto__texto h4 {
