--- a/site_ViveBio/public/css/productAll.css
+++ b/site_ViveBio/public/css/productAll.css
@@ -9,18 +9,6 @@
     align-items: center;
 }
 
-.productAll .titulares {
-    text-align: center;
-    color: white;
-    background-color: var(--verdeOscuro);
-    margin: 30px 0;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 32px;
-}
-
 .productAll .productosRelacionados {
     color: white;
     background-color: var(--verdeOscuro);
@@ -63,6 +51,7 @@
     width: 100%;
     position: absolute;
     transition: all 0.5s;
+    height: 100%;
 }
 
 .productAll .estilo-c:hover .img-container img {
@@ -82,7 +71,7 @@
     width: 33%;
 }
 
-.productAll .box-nombre-edit{
+.productAll .box-nombre-edit {
     display: flex;
     justify-content: space-between;
 }
@@ -125,6 +114,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
+}
+
+.productAll .iconos-white a {
+    background-color: var(--azulSuave);
+    color: white;
+    border-radius: 50%;
+    font-size: 10px;
+    padding: 4px;
 }
 
 .productAll .card-c-iconos .buttons {
@@ -136,6 +134,75 @@
     background-color: var(--azulSuave);
     color: white;
     border-radius: 30%;
+}
+
+/* NUESTRA COMUNIDAD OPINA */
+.productAll .titulares {
+    text-align: center;
+    color: white;
+    background-color: var(--verdeOscuro);
+    margin: 30px 0;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+}
+
+.productAll .comunidad {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    flex-wrap: nowrap;
+    padding: 0px 30px 50px;
+}
+
+.productAll .card__perfil {
+    border: 2px solid antiquewhite;
+    width: 100%;
+    padding: 10px;
+    border-radius: 20px;
+    background-color: rgba(127, 255, 212, 0.5);
+    ;
+    color: var(--VioletaOscuro);
+    text-align: center;
+}
+
+.productAll .card__perfil p {
+    padding-top: 10px;
+    color: var(--VioletaOscuro);
+    text-shadow: none;
+    font-size: 12px;
+    font-size: 12px;
+    background-color: rgba(127, 255, 212, 0.9);
+    border-radius: 8px;
+}
+
+.productAll .card__nombre img {
+    width: 20%;
+    border-radius: 50%;
+    padding-top: 15px;
+}
+
+.productAll .card__nombre h2 {
+    padding-top: 5px;
+}
+
+.productAll .iconos-eco {
+    margin: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    align-items: end;
+    justify-content: space-around;
+    margin-bottom: -48px;
+}
+
+.productAll .iconos-eco img {
+    width: 24%;
+    border-radius: 50%;
 }
 
 .productAll .estilo-c .add-cart:hover {
@@ -172,7 +239,7 @@
     .productAll .estilo-c .img-container img {
         top: 0;
         height: 100%;
-      }
+    }
 
     .productAll .estilo-c .add-cart {
         padding: 5px;
@@ -185,26 +252,29 @@
     }
 }
 
-    @media (min-width: 760px) {
-        /*PRODUCTOS RELACIONADOS*/
-        .productAll .productosRelacionados {
-            margin-bottom: 30px;
-            height: 60px;
-            display: flex;
-            flex-direction: row;
-        }
+@media (min-width: 760px) {
+    .productAll .productosRelacionados {
+        margin-bottom: 30px;
+        height: 60px;
+        display: flex;
+        flex-direction: row;
+    }
 
-        .productAll .card.estilo-c {
-            width: 30%;
-        }
+    .productAll .card.estilo-c {
+        width: 30%;
+    }
 
-        /*PROPIEDAD PRODUCTO*/
-        .productAll .estilo-c .info-container span {
+    /*PROPIEDAD PRODUCTO*/
+    .productAll .estilo-c .info-container span {
         font-size: 20px;
-}
+    }
+
+    .productAll .iconos-eco {
+        width: 97%;
+    }
 }
 
-.productAll .banner img{
+.productAll .banner img {
     width: 100%;
     margin-bottom: -5px;
 }
