--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -43,7 +43,7 @@
                 <div class="producto-iconos">
                   <a href="#"><i class="fa-solid fa-star"></i></a>
                   <a href=""><i class="fa-solid fa-share-nodes"></i></a>
-                  <a href="/products/Edit"><i class="fa-solid fa-file-pen"></i></a>
+                  <a href="/products/Edit"><i class="fa-solid fa-pen"></i></a>
                   <a href="#"><i class="fa-solid fa-trash-can"></i></a>
                   <a href="/productCarrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
                 </div>
@@ -68,7 +68,7 @@
               <div class="card-c-iconos">
                 <div class="iconos-white">
                   <a href="/products/Card"><i class="fa-solid fa-eye"></i></a>
-                  <a href="/products/Edit"><i class="fa-solid fa-file-pen"></i></a>
+                  <a href="/products/Edit"><i class="fa-solid fa-pen"></i></a>
                   <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                   <a href="#"><i class="fa-solid fa-star"></i></a>
                 </div>
@@ -92,7 +92,7 @@
               <div class="card-c-iconos">
                 <div class="iconos-white">
                   <a href="/products/Card"><i class="fa-solid fa-eye"></i></a>
-                  <a href="/products/Edit"><i class="fa-solid fa-file-pen"></i></a>
+                  <a href="/products/Edit"><i class="fa-solid fa-pen"></i></a>
                   <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                   <a href="#"><i class="fa-solid fa-star"></i></a>
                 </div>
@@ -116,7 +116,7 @@
               <div class="card-c-iconos">
                 <div class="iconos-white">
                   <a href="/products/Card"><i class="fa-solid fa-eye"></i></a>
-                  <a href="/products/Edit"><i class="fa-solid fa-file-pen"></i></a>
+                  <a href="/products/Edit"><i class="fa-solid fa-pen"></i></a>
                   <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                   <a href="#"><i class="fa-solid fa-star"></i></a>
                 </div>
@@ -140,7 +140,7 @@
               <div class="card-c-iconos">
                 <div class="iconos-white">
                   <a href="/products/Card"><i class="fa-solid fa-eye"></i></a>
-                  <a href="/products/Edit"><i class="fa-solid fa-file-pen"></i></a>
+                  <a href="/products/Edit"><i class="fa-solid fa-pen"></i></a>
                   <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                   <a href="#"><i class="fa-solid fa-star"></i></a>
                 </div>
@@ -164,7 +164,7 @@
               <div class="card-c-iconos">
                 <div class="iconos-white">
                   <a href="/products/Card"><i class="fa-solid fa-eye"></i></a>
-                  <a href="/products/Edit"><i class="fa-solid fa-file-pen"></i></a>
+                  <a href="/products/Edit"><i class="fa-solid fa-pen"></i></a>
                   <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                   <a href="#"><i class="fa-solid fa-star"></i></a>
                 </div>
@@ -188,7 +188,7 @@
               <div class="card-c-iconos">
                 <div class="iconos-white">
                   <a href="/products/Card"><i class="fa-solid fa-eye"></i></a>
-                  <a href="/products/Edit"><i class="fa-solid fa-file-pen"></i></a>
+                  <a href="/products/Edit"><i class="fa-solid fa-pen"></i></a>
                   <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                   <a href="#"><i class="fa-solid fa-star"></i></a>
                 </div>
