--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -25,7 +25,7 @@ ANIMACIÓN DE INTRO
     top: 0;
     width: 100%;
     height: 100vh;
-    background-image: url(/images/fondo-intro7.gif);
+    background-image: url(/images/fondo-intro.gif);
     transition: 1.5s;
     background-size: cover;
     background-position: center center;
