--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -27,7 +27,7 @@
                     <p>$300</p>
                 </div>
                 <div class="verart__home">
-                    <a href="/productCard">Ver mas</a>
+                    <a href="/Products/Card">Ver mas</a>
                 </div>
             </article>
             <article class="art__home">
@@ -42,7 +42,7 @@
                     <p>$300</p>
                 </div>
                 <div class="verart__home">
-                    <a href="/productCard">Ver mas</a>
+                    <a href="/Products/Card">Ver mas</a>
                 </div>
             </article>
             <article class="art__home">
@@ -57,7 +57,7 @@
                     <p>$300</p>
                 </div>
                 <div class="verart__home">
-                    <a href="/productCard">Ver mas</a>
+                    <a href="/Products/Card">Ver mas</a>
                 </div>
             </article>
             <article class="art__home">
@@ -72,7 +72,7 @@
                     <p>$300</p>
                 </div>
                 <div class="verart__home">
-                    <a href="/productCard">Ver mas</a>
+                    <a href="/Products/Card">Ver mas</a>
                 </div>
             </article>
             <article class="art__home" id="art__home4">
@@ -87,12 +87,12 @@
                     <p>$300</p>
                 </div>
                 <div class="verart__home">
-                    <a href="/productCard">Ver mas</a>
+                    <a href="/Products/Card">Ver mas</a>
                 </div>
             </article>
             <article class="vermas__home">
                 <div class='vermas-general'>
-                    <a href="/productAll">Ver mas</a>
+                    <a href="/Products/All">Ver mas</a>
                 </div>
             </article>
         </section>
@@ -104,21 +104,21 @@
             <article class="categorias__home">
                 <div class="corporal__home" id="cate">
                     <div class="barra__cate__home">
-                        <a href="">BioCorporal</a>
+                        <a href="/Products/All">BioCorporal</a>
                     </div>
                 </div>
             </article>
             <article class="categorias__home">
                 <div class="capilar__home" id="cate">
                     <div class="barra__cate__home">
-                        <a href="">BioCapilar</a>
+                        <a href="/Products/All">BioCapilar</a>
                     </div>
                 </div>
             </article>
             <article class="categorias__home" >
                 <div class="spa__home" id="cate">
                     <div class="barra__cate__home">
-                        <a href="">BioSpa</a>
+                        <a href="/Products/All">BioSpa</a>
                     </div>
                 </div>
             </article>
