animaciones en categorias de home

--- a/site_ViveBio/public/css/header.css
+++ b/site_ViveBio/public/css/header.css
@@ -120,6 +120,7 @@ header .header__burger {
         margin-left: 5px;
         width: 45px;
         height: 45px;
+        cursor: pointer;
     }
 
     .header__user {
