--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -176,18 +176,7 @@ segunda parte del main
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.home .sect2 .categorias__home .corporal__home:hover{
-    transform: scale(1.2);
-    filter: blur(10px);
-}
-.home .sect2 .categorias__home .capilar__home:hover{
-    transform: scale(1.2);
-    filter: blur(10px);
-}
-.home .sect2 .categorias__home .spa__home:hover{
-    transform: scale(1.2);
-    filter: blur(10px);
-}
+
 
 
 #cate {
@@ -236,6 +225,7 @@ segunda parte del main
     ,url(/images/producto3.jpeg);
     background-size: cover;
     transition: all 0.5s;
+
 }
 
 
@@ -251,7 +241,7 @@ segunda parte del main
     align-items: center;
 }
 
-.barra__cate__home a{
+.barra__cate__home p{
     font-size: 24px;
 }
 
@@ -335,6 +325,32 @@ segunda parte del main
     /*Seccion 2 del home*/
     .home .sect2 {
         justify-content: space-evenly;
+    }
+
+    .home .sect2 .categorias__home{
+        width: 275px;
+        height: 275px;
+    }
+
+    .home .sect2 .categorias__home .capilar__home,
+    .home .sect2 .categorias__home .corporal__home,
+    .home .sect2 .categorias__home .spa__home{
+        filter: blur(3px);
+
+    }
+
+
+    .home .sect2 .categorias__home:hover .corporal__home{
+        transform: scale(1.1);
+        filter: blur(0px);
+    }
+    .home .sect2 .categorias__home:hover .capilar__home{
+        transform: scale(1.2);
+        filter: blur(0px);
+    }
+    .home .sect2 .categorias__home:hover .spa__home{
+        transform: scale(1.2);
+        filter: blur(0px);
     }
 
 
