--- a/site_ViveBio/views/productCart.html
+++ b/site_ViveBio/views/productCart.html
@@ -16,9 +16,9 @@
 
 
 
-    <main>
-        <section class="carrito-contenedor">
-
+<main>
+    <section class="carrito-contenedor">
+        <div class="carrito-contenedor-general">
             <div class="carrito_pasos">
                 <p>Paso 1 - Paso 2 - Paso 3</p>
             </div>
@@ -154,12 +154,12 @@
                 <button type="submit">Limpiar Carrito</button>
                 <button type="submit">Siguiente Paso</button>
             </div>
-
-        </section>
+        </div>
+    </section>
         
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    </main>
+</main>
 
 
     <!--<footer class="footer">
