Animation intro stoped

--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -132,6 +132,6 @@
                 </section>
             </main>
             <%- include('./partials/footer') %>
-                <script src="/javascript/intro.js"></script>
+                <!-- <script src="/javascript/intro.js"></script> -->
     </body>
 </html>
