--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -43,8 +43,10 @@
                 <div class="producto-iconos">
                   <a href="#"><i class="fa-solid fa-star"></i></a>
                   <a href=""><i class="fa-solid fa-share-nodes"></i></a>
-                  <a href="/products/Edit"><i class="fa-solid fa-pen"></i></a>
-                  <a href="#"><i class="fa-solid fa-trash-can"></i></a>
+                  <a href="/products/Edit/1"><i class="fa-solid fa-pen"></i></a><!--pongo 1 para producto 1, pero despues cambiar-->
+                  <form action="/Products/remove/<%= products.id %>?_method=DELETE" method="POST"> 
+                    <button type="submit"><i class="fa-solid fa-trash-can"></i></button>
+                  </form>
                   <a href="/productCarrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
                 </div>
               </div>
