--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -8,11 +8,11 @@
       <main>
         <section class="producto">
           <div class="producto__texto">
-            <h1>🔥LUFFA + JABÓN DE NARANJA Y CAFÉ🔥</h1>
+            <h1><%= product.name %></h1>
             <div class="container-imagen-texto">
             <div class="producto__imagen">
               <div class="box-imagen">
-                <img src="/images/JabonLuffa-11.jpg" alt="producto-combo">
+                <img src="/images/JabonLuffa-11.jpg" alt="...">
               </div>
               <div class="box-info">
                 <h5>-Exfoliante-</h5>
